multiframework-demo/force-app/main/default/objects/ContactTokenUsage__c/ContactTokenUsage__c.object-meta.xml
<CustomObject>
    <label>Contact Token Usage</label>
    <nameField>
        <label>Contact Token Usage Name</label>
        <type>AutoNumber</type>
        <displayFormat>CTU-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Contact Token Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>