multiframework-demo/force-app/main/default/objects/ContactTokenUsage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Token Usages</relationshipLabel>
    <relationshipName>ContactTokenUsages</relationshipName>
    <type>Lookup</type>
</CustomField>