multiframework-demo/force-app/main/default/objects/ContactTokenUsage__c/fields/TokenUsage__c.field-meta.xml
<CustomField>
    <fullName>TokenUsage__c</fullName>
    <label>Token Usage</label>
    <referenceTo>TokenUsage__c</referenceTo>
    <relationshipLabel>Contact Token Usages</relationshipLabel>
    <relationshipName>ContactTokenUsages</relationshipName>
    <type>Lookup</type>
</CustomField>