multiframework-demo/force-app/main/default/objects/ContactTokenUsage__c/fields/UsageAmount__c.field-meta.xml
<CustomField>
    <fullName>UsageAmount__c</fullName>
    <label>Usage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>